# c2cli

./: README.md  pyproject.toml
src/c2cli/: __init__.py  converter.py  models.py
src/c2cli/formats/: __init__.py  coco.py  pascal_voc.py  yolo.py
